# City-traffic-data-warehouse

./: .env.example  .gitignore  10 Academy Cohort A - Weekly Challenge_ Week 2.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
airflow/tests/: __init__.py  test_repo_layout.py
docs/: README.md
