[project]
name = "city-traffic-data-warehouse"
version = "0.1.0"
description = "ELT data warehouse for city traffic trajectory data (pNEUMA)"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["airflow", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["airflow/tests"]
pythonpath = ["."]
